# switch-2-Wii-U

./: .diagnostic-v0.8.1-primary-shell  .gitignore  CMakeLists.txt  Dockerfile  README.md  ui-v080-diagnostic.txt
.github/: diagnostic-v0.7.0  diagnostic-v0.7.1  diagnostic-v0.7.2.txt  diagnostic-v0.7.3-icons.txt  diagnostic-v0.7.3-ui-plus.txt  diagnostic-v0.7.3-ui-plus2.txt  release-diagnostic.txt
.github/workflows/: build.yml  release-v0.6.0.yml  release-v0.7.0.yml  release-v0.7.1.yml  release-v0.7.2.yml  release-v0.7.3.yml  release-v0.8.0.yml  release-v0.8.1.yml
app/: CMakeLists.txt
app/src/: common.hpp  config.cpp  config.hpp  embedded_icons.cpp  intro.cpp  intro.hpp  launcher.cpp  launcher.hpp  launcher_ui_patch.hpp  main.cpp  ui.cpp  ui.hpp  ui_ambient.cpp  ui_categories.cpp  ui_extras.hpp  wiiu_collections.cpp  wiiu_collections.hpp
plugin/: Makefile
plugin/src/: main.cpp
scripts/: build.sh  prepare_intro.sh
